--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^8.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.41.1"
   }
 }
