--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-transpile-modules": "^8.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.41.1"
+    "sass": "^1.41.1",
+    "typescript": "^4.4.3"
   }
 }
